Fixed driver package all sonar lint issues